--- a/css/netention.css
+++ b/css/netention.css
@@ -1,9 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+
 
 
 html, body {
     font-size:12px;
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: Arial, sans-serif;
     height: 100%;
 }
 body {
@@ -33,47 +33,39 @@ div#nt-view {
 
 
 /* MAIN MENU */
-div#nt-menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 42px;
-    z-index: 5;
-    display: block;
-    text-align: center;
-    opacity: 0;
-}
-div#nt-menu.visible {
-    opacity: 1;
-}
+/*div#nt-menu {*/
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*width: 100%;*/
+    /*height: 42px;*/
+    /*z-index: 5;*/
+    /*display: block;*/
+    /*opacity: 0;*/
+/*}*/
+/*div#nt-menu.visible {*/
+    /*opacity: 1;*/
+/*}*/
 
-div.nt-view-menu {
-    width: 180px;
-    height: 42px;
-    position: absolute;
-    left: 50%;
-    margin-left: -140px;
+#nt-view-menu {
+    top: 0; left: 0;
+    position: fixed;
+    margin: 0;
 }
-div.nt-right-menu {
-    width: 130px;
-    height: 42px;
-    position: absolute;
-    right: 50px;
+#nt-right-menu {
+    top: 0; right: 0;
+    position: fixed;
     margin: 0;
 }
 
-div.nt-btn-grp {
-    width: 100%;
-    max-width: 280px;
-    height: 42px;
+.nt-btn-grp {
     line-height: 0;
     display:table;
     table-layout: fixed;
     margin: 0;
 }
 
-div.nt-view-btn {
+.nt-view-btn {
     display: table-cell;
     height: 42px;
     width: 42px;
@@ -87,8 +79,8 @@ div.nt-view-btn {
     border-bottom:2px solid transparent;
 }
 
-div.nt-btn:hover,
-div.nt-btn:focus {
+.nt-btn:hover,
+.nt-btn:focus {
     background:rgba(0,0,0,0.3);
     cursor: pointer;
 }
@@ -116,9 +108,7 @@ div#nt-user img {
 
 /* SEARCH */
 .nt-search {
-    position: absolute;
-    left: 20px;
-    z-index: 6;
+    z-index: 5;
 }
 
 input {
@@ -126,30 +116,31 @@ input {
 }
 input::-webkit-search-decoration,
 input::-webkit-search-cancel-button {
-    display: none; 
+    display: none;
 }
 
-#search input[type=search] {
+input#find {
     width: 32px;
     height: 32px;
-    color: transparent;
     cursor: pointer;
+    color: transparent;
     margin-top: 2px;
-    
-    -webkit-border-radius: 10em;
-    -moz-border-radius: 10em;
-    border-radius: 10em;
-    
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    transition: all .5s;
+    border: 0;
+
+    /*-webkit-border-radius: 10em;*/
+    /*-moz-border-radius: 10em;*/
+    /*border-radius: 10em;*/
+
+    -webkit-transition: all .1s;
+    -moz-transition: all .1s;
+    transition: all .1s;
 
     -webkit-appearance: textfield;
     -webkit-box-sizing: content-box;
-    font-family: inherit;
-    font-size: 100%;
+
 }
-#search input[type=search]:focus {
+input#find:focus {
+    color: orange;
     width: 130px;
     padding-left: 32px;
     cursor: auto;
@@ -157,12 +148,10 @@ input::-webkit-search-cancel-button {
     -moz-box-shadow: 0 0 5px rgba(0,0,0,.5);
     box-shadow: 0 0 5px rgba(0,0,0,.5);
 }
-#search input:-moz-placeholder {
+input#find:-moz-placeholder, input#find::-webkit-input-placeholder {
     color: transparent;
 }
-#search input::-webkit-input-placeholder {
-    color: transparent;
-}
+
 
 /* DROP DOWN MENU */
 
@@ -183,7 +172,7 @@ nav.left {
     left: 0;
     display: none;
 }
-nav.left.visible, 
+nav.left.visible,
 nav.right.visible {
     display: block;
 }
@@ -240,4 +229,14 @@ nav ul li ul li a:hover {
 }
 .left {
   float: left;
+}
+
+
+#loading {
+    text-align:center;
+    font-size: 400%;
+    width: 100%;
+    top: auto;
+    bottom: auto;
+    position: fixed;
 }
