--- a/css/netention.css
+++ b/css/netention.css
@@ -26,9 +26,9 @@ body {
 /* MAIN VIEWPORT */
 div#nt-view {
     display: block;
+    position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 1;
 }
 
 
