--- a/css/netention.css
+++ b/css/netention.css
@@ -1,26 +1,26 @@
 
-
-
 html, body {
-
-    font-family: Arial, sans-serif;
+    font-family: Monospace;
     height: 100%;
 }
+
 body {
-  min-height: 100%;
+    min-height: 100%;
 }
+
 *, :after, :before {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
 .noselect, .nt-btn {
-    -webkit-touch-callout:none;
-    -webkit-user-select:none;
-    -khtml-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /* MAIN VIEWPORT */
@@ -31,36 +31,38 @@ body {
     height: 100%;
 }
 
-
 /* MAIN MENU */
 /*div#nt-menu {*/
-    /*position: fixed;*/
-    /*top: 0;*/
-    /*left: 0;*/
-    /*width: 100%;*/
-    /*height: 42px;*/
-    /*z-index: 5;*/
-    /*display: block;*/
-    /*opacity: 0;*/
+/*position: fixed;*/
+/*top: 0;*/
+/*left: 0;*/
+/*width: 100%;*/
+/*height: 42px;*/
+/*z-index: 5;*/
+/*display: block;*/
+/*opacity: 0;*/
 /*}*/
 /*div#nt-menu.visible {*/
-    /*opacity: 1;*/
+/*opacity: 1;*/
 /*}*/
 
 #nt-view-menu {
-    top: 0; left: 0;
+    top: 0;
+    left: 0;
     position: fixed;
     margin: 0;
 }
+
 #nt-right-menu {
-    top: 0; right: 0;
+    top: 0;
+    right: 0;
     position: fixed;
     margin: 0;
 }
 
 .nt-btn-grp {
     line-height: 0;
-    display:table;
+    display: table;
     table-layout: fixed;
     margin: 0;
 }
@@ -76,15 +78,14 @@ body {
 }
 
 .nt-btn {
-    border-bottom:2px solid transparent;
+    border-bottom: 2px solid transparent;
 }
 
 .nt-btn:hover,
 .nt-btn:focus {
-    background:rgba(0,0,0,0.3);
+    background: rgba(0, 0, 0, 0.3);
     cursor: pointer;
 }
-
 
 .nt-btn span.badge.right {
     padding: 7px 4px;
@@ -93,9 +94,10 @@ body {
 }
 
 #notifications {
-    padding:0 10px;
+    padding: 0 10px;
     width: 69px;
 }
+
 #notifications i {
     position: relative;
     left: -5px;
@@ -114,6 +116,7 @@ div#nt-user img {
 input {
     outline: none;
 }
+
 input::-webkit-search-decoration,
 input::-webkit-search-cancel-button {
     display: none;
@@ -139,19 +142,20 @@ input#find {
     -webkit-box-sizing: content-box;
 
 }
+
 input#find:focus {
     color: orange;
     width: 130px;
     padding-left: 32px;
     cursor: auto;
-    -webkit-box-shadow: 0 0 5px rgba(0,0,0,.5);
-    -moz-box-shadow: 0 0 5px rgba(0,0,0,.5);
-    box-shadow: 0 0 5px rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+    box-shadow: 0 0 5px rgba(0, 0, 0, .5);
 }
+
 input#find:-moz-placeholder, input#find::-webkit-input-placeholder {
     color: transparent;
 }
-
 
 /* DROP DOWN MENU */
 
@@ -164,76 +168,88 @@ nav {
     -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
 }
+
 nav.right {
     right: 0;
     display: none;
 }
+
 nav.left {
     left: 0;
     display: none;
 }
+
 nav.left.visible,
 nav.right.visible {
     display: block;
 }
+
 nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
+
 nav ul li {
-  /* Sub Menu */
+    /* Sub Menu */
 }
+
 nav ul li a {
-  display: block;
-  background: #3c3c3c;
-  padding: 10px 15px;
-  color: #fff;
-  text-decoration: none;
-  -webkit-transition: 0.2s linear;
-  -moz-transition: 0.2s linear;
-  -ms-transition: 0.2s linear;
-  -o-transition: 0.2s linear;
-  transition: 0.2s linear;
+    display: block;
+    background: #3c3c3c;
+    padding: 10px 15px;
+    color: #fff;
+    text-decoration: none;
+    -webkit-transition: 0.2s linear;
+    -moz-transition: 0.2s linear;
+    -ms-transition: 0.2s linear;
+    -o-transition: 0.2s linear;
+    transition: 0.2s linear;
 }
+
 nav ul li a:hover {
-  background: #1c1c1c;
+    background: #1c1c1c;
 }
+
 nav ul li a .fa {
-  width: 16px;
-  text-align: center;
-  margin-right: 5px;
+    width: 16px;
+    text-align: center;
+    margin-right: 5px;
 }
+
 nav ul li a .badge {
-  display: inline-block;
-  background: #fff;
-  /* IE Fallback */
-  background: rgba(255, 255, 255, 0.2);
-  padding: 3px 7px;
-  color: #fff;
-  font-size: 12px;
-  font-weight: 800;
+    display: inline-block;
+    background: #fff;
+    /* IE Fallback */
+    background: rgba(255, 255, 255, 0.2);
+    padding: 3px 7px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 800;
 }
+
 nav ul li ul li a {
-  background: #444;
-  border-left: 4px solid transparent;
-  padding: 10px 20px;
+    background: #444;
+    border-left: 4px solid transparent;
+    padding: 10px 20px;
 }
+
 nav ul li ul li a:hover {
-  background: #333;
-  border-left: 4px solid #FC0;
+    background: #333;
+    border-left: 4px solid #FC0;
 }
+
 /* Float Right/Left */
 .right {
-  float: right;
-}
-.left {
-  float: left;
+    float: right;
 }
 
+.left {
+    float: left;
+}
 
 #loading {
-    text-align:center;
+    text-align: center;
     font-size: 400%;
     width: 100%;
     top: auto;
