--- a/css/netention-theme.css
+++ b/css/netention-theme.css
@@ -7,12 +7,7 @@
   background:#b3d4fc;
   text-shadow:none;
 }
-input:-moz-placeholder {
-    color: #999;
-}
-input::-webkit-input-placeholder {
-    color: #999;
-}
+
 .nt-btn.active {
     border-bottom:2px solid #FC0;
 }
@@ -26,13 +21,13 @@ div.nt-btn:focus {
 body.dark div#view {
     background: #000;
 }
-body.dark input[type=search] {
+body.dark #find {
     background: url(/img/icons/search-icon-wt.png) no-repeat 7px center;
 }
-body.light input#find[type=search]:hover {
+body.light #find:hover {
     background-color: #1c1c1c;
 }
-body.light input#find[type=search]:focus {
+body.light #find:focus {
     background: url(/img/icons/search-icon.png) no-repeat 7px center;
     color: #DDD;
 }
@@ -49,14 +44,14 @@ body.dark .nt-view-btn {
 body.light div#view {
     background: #FFF;
 }
-body.light input[type=search] {
+body.light #find {
     background: #FFF url(/img/icons/search-icon.png) no-repeat 7px center;
     border: solid 1px rgba(0,0,0,0.2);
 }
-body.light input#find[type=search]:hover {
+body.light #find:hover {
     background-color: #fff;
 }
-body.light input#find[type=search]:focus {
+body.light #find:focus {
     background: #FFF url(/img/icons/search-icon.png) no-repeat 7px center;
     color: #000;
     border-color: rgba(0,0,0,.5);
@@ -64,4 +59,11 @@ body.light input#find[type=search]:focus {
 body.light .nt-btn span.badge.right {
     background: #FFF;
     color:#111;
+}
+
+input:-moz-placeholder {
+    color: #999;
+}
+input::-webkit-input-placeholder {
+    color: #999;
 }
