--- a/css/netention.css
+++ b/css/netention.css
@@ -53,6 +53,11 @@ body {
     margin: 0;
 }
 
+.nt-btn-grp {
+    display: table;
+    table-layout: fixed;
+}
+
 #nt-right-menu {
     top: 0;
     right: 0;
@@ -60,12 +65,6 @@ body {
     margin: 0;
 }
 
-.nt-btn-grp {
-    line-height: 0;
-    display: table;
-    table-layout: fixed;
-    margin: 0;
-}
 
 .nt-view-btn {
     display: table-cell;
@@ -122,13 +121,14 @@ input::-webkit-search-cancel-button {
     display: none;
 }
 
-input#find {
+#find {
     width: 32px;
     height: 32px;
     cursor: pointer;
     color: transparent;
     margin-top: 2px;
     border: 0;
+
 
     /*-webkit-border-radius: 10em;*/
     /*-moz-border-radius: 10em;*/
@@ -143,17 +143,29 @@ input#find {
 
 }
 
-input#find:focus {
-    color: orange;
-    width: 130px;
+#find .CodeMirror {
+    -webkit-filter: invert(90%);
+    width: auto !important;
+    min-width: 200px;
+    height: auto !important;
+    margin-left: 35px;
+}
+#find:focus {
+
+    width: auto !important; /*130px;*/
+    height: auto !important; /*130px;*/
     padding-left: 32px;
     cursor: auto;
-    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
-    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .5);
-    box-shadow: 0 0 5px rgba(0, 0, 0, .5);
+
+    position: relative;
+
+
+        /*-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .5);*/
+    /*-moz-box-shadow: 0 0 5px rgba(0, 0, 0, .5);*/
+    /*box-shadow: 0 0 5px rgba(0, 0, 0, .5);*/
 }
 
-input#find:-moz-placeholder, input#find::-webkit-input-placeholder {
+#find:-moz-placeholder, #find::-webkit-input-placeholder {
     color: transparent;
 }
 
@@ -164,9 +176,9 @@ nav {
     top: 43px;
     width: 360px;
     margin: 0;
-    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    /*-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);*/
+    /*-moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);*/
+    /*box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);*/
 }
 
 nav.right {
@@ -249,9 +261,12 @@ nav ul li ul li a:hover {
 }
 
 #loading {
+    background-color: black;
+    color: white;
     text-align: center;
     font-size: 400%;
     width: 100%;
+    height: 100%;
     top: auto;
     bottom: auto;
     position: fixed;
