--- a/css/netention-theme.css
+++ b/css/netention-theme.css
@@ -21,16 +21,11 @@ div.nt-btn:focus {
 body.dark div#view {
     background: #000;
 }
-body.dark #find {
-    background: url(/img/icons/search-icon-wt.png) no-repeat 7px center;
-}
-body.light #find:hover {
+
+body.dark #find:hover {
     background-color: #1c1c1c;
 }
-body.light #find:focus {
-    background: url(/img/icons/search-icon.png) no-repeat 7px center;
-    color: #DDD;
-}
+
 body.dark .nt-btn span.badge.right {
     background: #111;
     color:#FFF;
@@ -44,17 +39,8 @@ body.dark .nt-view-btn {
 body.light div#view {
     background: #FFF;
 }
-body.light #find {
-    background: #FFF url(/img/icons/search-icon.png) no-repeat 7px center;
-    border: solid 1px rgba(0,0,0,0.2);
-}
 body.light #find:hover {
     background-color: #fff;
-}
-body.light #find:focus {
-    background: #FFF url(/img/icons/search-icon.png) no-repeat 7px center;
-    color: #000;
-    border-color: rgba(0,0,0,.5);
 }
 body.light .nt-btn span.badge.right {
     background: #FFF;
