--- a/css/netention.css
+++ b/css/netention.css
@@ -46,7 +46,7 @@ body {
 /*opacity: 1;*/
 /*}*/
 
-#nt-view-menu {
+#nt-left-menu {
     top: 0;
     left: 0;
     position: fixed;
@@ -122,47 +122,53 @@ input::-webkit-search-cancel-button {
 }
 
 #find {
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    color: transparent;
-    margin-top: 2px;
     border: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
 
-
-    /*-webkit-border-radius: 10em;*/
-    /*-moz-border-radius: 10em;*/
-    /*border-radius: 10em;*/
-
-    -webkit-transition: all .1s;
-    -moz-transition: all .1s;
-    transition: all .1s;
-
-    -webkit-appearance: textfield;
-    -webkit-box-sizing: content-box;
-
+    width: 1em;
+    height: 1em;
+    overflow: hidden;
 }
+
+
+#find:focus, #find:active {
+    max-width: 75%;
+    max-height: 75%;
+    min-width: 200px;
+    min-height: 1em;
+    width: auto;
+    height: auto;
+    opacity: 0.9;
+}
+
 
 #find .CodeMirror {
-    -webkit-filter: invert(90%);
-    width: auto !important;
-    min-width: 200px;
-    height: auto !important;
-    margin-left: 35px;
+    width: 100%;
+    height: 100%;
 }
-#find:focus {
 
+#find .viewMenu i:hover {
+    color: orange;
+}
+
+
+
+#find:focus, #find:hover {
+
+    min-width: 25%;
     width: auto !important; /*130px;*/
     height: auto !important; /*130px;*/
-    padding-left: 32px;
     cursor: auto;
 
-    position: relative;
-
+    overflow: auto;
 
         /*-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .5);*/
     /*-moz-box-shadow: 0 0 5px rgba(0, 0, 0, .5);*/
     /*box-shadow: 0 0 5px rgba(0, 0, 0, .5);*/
+}
+#viewMenu {
 }
 
 #find:-moz-placeholder, #find::-webkit-input-placeholder {
