--- a/css/netention.css
+++ b/css/netention.css
@@ -127,8 +127,9 @@ input::-webkit-search-cancel-button {
     top: 0;
     left: 0;
 
-    width: 1em;
-    height: 1em;
+    font-size: 200%;
+    width: 2em;
+    height: 2em;
     overflow: hidden;
 }
 
@@ -145,12 +146,19 @@ input::-webkit-search-cancel-button {
 
 
 #find .CodeMirror {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
+}
+.multiline .CodeMirror  {
+    min-height: 6em;
 }
 
 #find .viewMenu i:hover {
     color: orange;
+}
+#find .viewMenu i {
+    width: 1.25em;
+    text-align: center;
 }
 
 
