--- a/css/netention.css
+++ b/css/netention.css
@@ -73,6 +73,7 @@ body {
     vertical-align: middle;
     text-align: center;
     box-sizing: border-box;
+    font-size: 32px !important;
 }
 
 .btn {
@@ -97,7 +98,7 @@ body {
 }
 
 
-/* SLIDER SWITCH */
+/* THEME SLIDER SWITCH */
 .switch {
   position: relative;
   display: inline-block;
@@ -116,7 +117,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #111;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -132,8 +133,12 @@ body {
   transition: .4s;
 }
 .switch input:checked + .slider {
-  background-color: #FC0;
+  background-color: #FFF;
 }
+.switch input:checked + .slider:before {
+  background-color: #111;
+}
+
 .switch input:focus + .slider {
   box-shadow: 0 0 1px #FC0;
 }
@@ -148,6 +153,103 @@ body {
 }
 .switch .slider.round:before {
   border-radius: 50%;
+}
+
+/* nSlider */
+.nslider {
+    display:none;
+    height:42px;
+    font-size:0;
+}
+.nslider input[type=range] {
+  -webkit-appearance: none;
+  margin: 0;
+  width: 100%;
+  position: relative;
+  top:15px;
+}
+.nslider input[type=range]:focus {
+  outline: none;
+}
+.nslider input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #2c2c2c;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+.nslider input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 32px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -14px;
+}
+.nslider input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #2c2c2c;
+}
+.nslider input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #2c2c2c;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+.nslider input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+.nslider input[type=range]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+.nslider input[type=range]::-ms-fill-lower {
+  background: #2c2c2c;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+.nslider input[type=range]::-ms-fill-upper {
+  background: #2c2c2c;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+.nslider input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+.nslider input[type=range]:focus::-ms-fill-lower {
+  background: #2c2c2c;
+}
+.nslider input[type=range]:focus::-ms-fill-upper {
+  background: #2c2c2c;
 }
 
 
