--- a/css/netention-theme.css
+++ b/css/netention-theme.css
@@ -7,6 +7,10 @@
   background:#b3d4fc;
   text-shadow:none;
 }
+a {
+  color: #FC0; }
+a:hover {
+  color: #FC0; }
 
 .btn.active {
     border-bottom:2px solid #FC0;
