--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -1,52 +1,3 @@
-
-html, body {
-    font-family: Monospace;
-    height: 100%;
-}
-
-body {
-    min-height: 100%;
-    overflow: hidden;
-}
-
-*, :after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.noselect, .btn {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-/* MAIN VIEWPORT */
-#view, #overlay {
-    display: block;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-}
-
-/* MAIN MENU */
-/*div#nt-menu {*/
-/*position: fixed;*/
-/*top: 0;*/
-/*left: 0;*/
-/*width: 100%;*/
-/*height: 42px;*/
-/*z-index: 5;*/
-/*display: block;*/
-/*opacity: 0;*/
-/*}*/
-/*div#nt-menu.visible {*/
-/*opacity: 1;*/
-/*}*/
-
 /*
 * Skeleton V2.0.4
 * Copyright 2014, Dave Gamache
@@ -203,6 +154,13 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 p {
   margin-top: 0; }
 
+
+/* Links
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+a {
+  color: #1EAEDB; }
+a:hover {
+  color: #0FA0CE; }
 
 
 /* Buttons
@@ -432,424 +390,6 @@ hr {
   content: "";
   display: table;
   clear: both; }
-
-
-/* NETENTION UI
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-#left-menu {
-    top: 0;
-    left: 0;
-    position: fixed;
-    margin: 0;
-    height: 42px;
-    display: table;
-}
-#right-menu {
-    top: 0;
-    right: 0;
-    position: fixed;
-    margin: 0;
-    height: 42px;
-}
-
-.btn-grp {
-    display: inline-flex;
-}
-
-.view-btn {
-    display: table-cell;
-    width: 42px;
-    vertical-align: middle;
-    text-align: center;
-    box-sizing: border-box;
-    font-size: 32px !important;
-
-}
-
-.btn {
-    border-bottom: 2px solid transparent;
-    cursor: pointer;
-}
-
-.btn span.badge.right {
-    padding: 7px 4px;
-    margin-top: 6px;
-    font-size: 8px;
-}
-
-#notifications {
-    padding: 0 10px;
-    width: 69px;
-}
-
-#notifications i {
-    position: relative;
-    left: -5px;
-}
-
-/* NETENTION theme switcher
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-i.fa-tint {
-    position: relative;
-    top: 2px;
-}
-i.fa-dark-theme:before {
-    font-family: "FontAwesome";
-    content: "\2600";
-}
-i.fa-light-theme:before {
-    font-family: "FontAwesome";
-    content: "\9788";
-}
-
-
-/* NETENTION nSlider
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-#font-size-dropdown {
-    display:block;
-    position: fixed;
-    top:48px;
-    right:10px;
-    height: 42px;
-    width:120px;
-    display:none;
-}
-#font-size-dropdown .badge {
-    position: fixed;
-    top: 50px;
-    right: 10px;
-    font-size: 12px !important;
-}
-.nslider {
-    height:42px;
-    font-size:0;
-}
-.nslider input[type=range] {
-  -webkit-appearance: none;
-  margin: 0;
-  width: 100%;
-  position: relative;
-  top:15px;
-}
-.nslider input[type=range]:focus {
-  outline: none;
-}
-.nslider input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 8.4px;
-  cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #2c2c2c;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
-}
-.nslider input[type=range]::-webkit-slider-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 32px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -14px;
-}
-.nslider input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #2c2c2c;
-}
-.nslider input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 8.4px;
-  cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #2c2c2c;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
-}
-.nslider input[type=range]::-moz-range-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-}
-.nslider input[type=range]::-ms-track {
-  width: 100%;
-  height: 8.4px;
-  cursor: pointer;
-  animate: 0.2s;
-  background: transparent;
-  border-color: transparent;
-  border-width: 16px 0;
-  color: transparent;
-}
-.nslider input[type=range]::-ms-fill-lower {
-  background: #2c2c2c;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-.nslider input[type=range]::-ms-fill-upper {
-  background: #2c2c2c;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-.nslider input[type=range]::-ms-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-}
-.nslider input[type=range]:focus::-ms-fill-lower {
-  background: #2c2c2c;
-}
-.nslider input[type=range]:focus::-ms-fill-upper {
-  background: #2c2c2c;
-}
-
-/* NETENTION pNotify
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.ui-pnotify-text {
-    padding: 10px 10px 10px 30px;
-}
-.ui-pnotify-icon, .ui-pnotify-icon span {
-    display: block;
-    float: left;
-    margin-right: .2em;
-    position: absolute;
-    top: 3px;
-    left: 3px;
-}
-.brighttheme-info {
-    color: white;
-    background-color: rgba(127,127,127,0.5);
-    padding: 0 !important;
-}
-
-/* NETENTION AVATAR / MENU TOGGLE BUTTON
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-#user img {
-    width: 32px;
-    position: relative;
-    top: -4px;
-}
-
-/* SEARCH */
-.search {
-    z-index: 5;
-}
-
-input {
-    outline: none;
-}
-
-input::-webkit-search-decoration,
-input::-webkit-search-cancel-button {
-    display: none;
-}
-
-#find {
-    border: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    width: 2em;
-    height: 2em;
-}
-#find * {
-    transition: all 0.3s;
-}
-#find .CodeMirror, #find .buttons * {
-    display: none;
-}
-#find .buttons #go { /* exception */
-    display: block !important;
-}
-#find:focus, #find:active, #find:hover {
-    min-width: 25%;
-    max-width: 75%;
-    max-height: 75%;
-    min-height: 1em;
-    width: auto;
-    height: auto;
-    opacity: 0.9;
-    overflow: auto;
-}
-#find:focus .buttons *, #find:active .buttons *, #find:hover .buttons *, #find:hover .CodeMirror {
-    display: block;
-}
-#find .CodeMirror {
-    width: auto;
-    height: auto;
-}
-.multiline .CodeMirror  {
-    min-height: 6em;
-}
-#find .buttons i:hover {
-    color: orange;
-}
-#find .buttons i {
-    width: 1.25em;
-    text-align: center;
-}
-#find:-moz-placeholder, #find::-webkit-input-placeholder {
-    color: transparent;
-}
-
-/* NETENTION user menu
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-nav {
-    position: absolute;
-    top: 43px;
-    width: 360px;
-    margin: 0;
-    /*-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);*/
-    /*-moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);*/
-    /*box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);*/
-}
-nav.right {
-    right: 0;
-    display: none;
-}
-nav.left {
-    left: 0;
-    display: none;
-}
-nav.left.visible,
-nav.right.visible {
-    display: block;
-}
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-nav ul li {
-    /* Sub Menu */
-}
-nav ul li a {
-    display: block;
-    background: #3c3c3c;
-    padding: 10px 15px;
-    color: #fff;
-    text-decoration: none;
-    -webkit-transition: 0.2s linear;
-    -moz-transition: 0.2s linear;
-    -ms-transition: 0.2s linear;
-    -o-transition: 0.2s linear;
-    transition: 0.2s linear;
-}
-nav ul li a:hover {
-    background: #1c1c1c;
-}
-nav ul li a .fa {
-    width: 16px;
-    text-align: center;
-    margin-right: 5px;
-}
-nav ul li a .badge {
-    display: inline-block;
-    background: #fff;
-    /* IE Fallback */
-    background: rgba(255, 255, 255, 0.2);
-    padding: 3px 7px;
-    color: #fff;
-    font-size: 12px;
-    font-weight: 800;
-}
-nav ul li ul li a {
-    background: #444;
-    border-left: 4px solid transparent;
-    padding: 10px 20px;
-}
-nav ul li ul li a:hover {
-    background: #333;
-    border-left: 4px solid #FC0;
-}
-
-
-/* Float Right/Left */
-.right {
-    float: right;
-}
-
-.left {
-    float: left;
-}
-
-#loading {
-    background-color: black;
-    color: white;
-    text-align: center;
-    font-size: 400%;
-    width: 100%;
-    height: 100%;
-    top: auto;
-    bottom: auto;
-    position: fixed;
-}
-
-/* NETENTION prompt.js
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.windget {
-    /*background-color: rgba(127,127,127,0.5);*/
-    /*max-width: 90%;*/
-    /*max-height: 90%;*/
-    position: fixed;
-    box-sizing: border-box;
-    pointer-events: all;
-    max-height: 95%;
-    max-width: 95%;
-    margin: 0.5em;
-    border: 4px solid;
-    border-color: transparent;
-}
-.editor {
-    padding: 0.5em;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-}
-.grid-item {
-    margin: 2px;
-    padding: 2px;
-}
-.grid-item:hover {
-    border-color: white;
-    cursor: move;
-}
-.cesium-widget-credits {
-    display: none
-}
-.windget:hover {
-    border-color: rgba(127,200,127,0.75);
-}
-.windget:active, .windget:focus {
-    border-color: rgba(127,127,200,0.75);
-}
-.CodeMirror-sizer:hover {
-    background-color: rgba(0,0,255,0.05);
-}
-.windget .CodeMirror {
-    height: 100% !important;
-}
-.windget .close_button {
-    top: 0;
-    right: 0;
-    opacity: 0.9;
-    overflow: hidden;
-    position: absolute;
-}
 
 
 /* Media Queries
